[mod]Applying Swagger for API doc
